# robotics-learning

./: .gitignore  README.md
01_ros_basics/migro_core_001/: package.xml  setup.cfg  setup.py
01_ros_basics/migro_core_001/migro_core_001/: hello_migro.py  listener.py
02_ros_services/migro_service_001/: package.xml  setup.cfg
02_services/migro_service_001/: setup.py
03_ros_actions/: README.md
03_ros_actions/migro_action_001/: package.xml  setup.cfg  setup.py
03_ros_actions/migro_interfaces/: CMakeLists.txt  package.xml
04_ros_parameters/: setup.py
04_ros_parameters/migro_parameters_001/: package.xml  setup.cfg  setup.py
05_tf2/migro_tf2_001/: package.xml  setup.cfg  setup.py
05_tf2/migro_tf2_001/migro_tf2_001/: tf_broadcaster.py  tf_listener.py
engineering_journal/: README.md
engineering_journal/Week_01/: Day_01_Linux_and_ROS2_Workspace.md  Day_02_First_ROS2_Node.md  Day_03_First_Publisher.md  Day_04_Publisher_Practice.md  Day_05_ROS2_Subscriber.md  Day_06_ROS2_Services.md
engineering_journal/Week_02/: Day_08_ROS2_Action_Interfaces.md  Day_09_ROS2_Action_Server_and_Client.md  Day_10_ROS2_Action_Goal.md  Day_14_First_ROS2_Launch_File.md  Module_04_Advanced_ROS2_Actions.md
engineering_journal/Week_03/: Day_15_ROS2_Parameters_Basics.md  Day_16_Dynamic_ROS2_Parameters.md  Day_17_Refactoring_Action_Client_With_Parameters.md  Day_18_Professional_ROS2_Launch_Files.md  Day_19_ROS2_Launch_Arguments.md  Day_20_ROS2_Integration_Project.md  Day_21_Introduction_to_TF2.md
engineering_journal/Week_04/: Day 22 TF2 Broadcaster.md  Day 23 TF2 Listeners.md
(+8 files in other folders)
