<?xml version="1.0"?>
<package format="3">
  <name>migro_tf2_001</name>
  <version>0.0.0</version>

  <description>ROS 2 package demonstrating TF2 Broadcasters and Coordinate Frames.</description>

  <maintainer email="ayosoremiobafemi@gmail.com">migro-tech</maintainer>

  <license>MIT</license>

  <!-- Build Tool -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Runtime Dependencies -->
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>

  <!-- Testing -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>

</package>
